k8s/dev/client-manifests.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: client
spec:
 replicas: 1
 selector:
   matchLabels:
     app: client
 template:
   metadata:
     labels:
       app: client
   spec:
     containers:
     - name: client
       image: nineteen17dh/client:latest
       resources:
          limits:
            memory: 128Mi
            cpu: 500m
       ports:
       - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-svc
spec:
  selector:
    app: client
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
