k8s/dev/product-service-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service-svc
spec:
  selector:
    app: product-service
  ports:
  - protocol: TCP
    port: 4001
    targetPort: 4001
