k8s/dev/user-service-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
spec:
  selector:
    app: user-service
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
