k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: nineteen17dns.com
    http:
      paths:
      - path: /user-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-service-svc
            port:
              number: 4000
      - path: /product-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: product-service-svc
            port:
              number: 4001
